resolved z-index issue

--- a/src/css/imports/_styles.css
+++ b/src/css/imports/_styles.css
@@ -61,7 +61,6 @@
 
 .header-image {
   z-index: 0;
-  position: relative;
   width: 100%;
 }
 
